@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <BAKKESMOD>C:\Program Files (x86)\Steam\steamapps\common\rocketleague\Binaries\Win32\bakkesmod</BAKKESMOD>
+    <BAKKESMOD>F:\SteamLibrary\steamapps\common\rocketleague\Binaries\Win32\bakkesmod</BAKKESMOD>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
