@@ -6,7 +6,3 @@
 * Hotkey assignement tab (not high priority - might require some sdk additions)
 * 3D gizmo editor (not high priority - cinder?)
 * Graph editor (https://blenderartists.org/uploads/default/original/4X/3/7/a/37a98fe07c55038cd7daea9ba42e89feeafc6378.png) (not high priority)
-
-
-In that case Id make it do the inverse and name it something like "Live changing smoothness (may affect performance)", and have it take integers from like 0 - 5 where at 0 its jittery and at 5 its buttery smooth
-sidebar slightly visible all the time
